tests/compiler/errors/03-unknown-type.jsa
// jastat-summary: Error on unknown type in variable declaration
// jastat: mode=compiler, capture=stderr

let x: UnknownType = 42;  // T311: Unknown type
